--- a/public/style.css
+++ b/public/style.css
@@ -2,10 +2,10 @@
   font-size: 16px;
   font-family: 'Open Sans';
   --text-primary: #b6b6b6;
-  --text-secundary: #ececec;
+  --text-secondary: #ececec;
 
   --bg-primary: #23232e;
-  --bg-secundary: #141418;
+  --bg-secondary: #141418;
   --transition-speed: 600ms;
 }
 
@@ -77,8 +77,8 @@ main {
 .nav-link:hover {
   filter: none;
 
-  background: var(--bg-secundary);
-  color: var(--text-secundary);
+  background: var(--bg-secondary);
+  color: var(o);
 }
 
 .link-text {
@@ -91,7 +91,17 @@ main {
   margin: 0 1.5rem;
 }
 
+.theme-icon {
+    display: none;
+}
 
+.dark #darkIcon {
+    display: block;
+}
+
+.light #lightIcon {
+    display: block;
+}
 
 
 
@@ -101,11 +111,9 @@ main {
 .fa-primary {
   color: #ff7eee;
 }
-
 .fa-secondary {
   color: #df49a6;
 }
-
 .fa-primary,
 .fa-secondary {
   transition: var(--transition-speed);
@@ -176,4 +184,35 @@ main {
   main {
     margin: 0;
   }
+}
+
+
+.dark {
+    --text-primary: #b6b6b6;
+    --text-secondary: #ececec;
+    --bg-primary: #23232e;
+    --bg-secondary: #141418;
+}
+  
+.light {
+    --text-primary: #1f1f1f;
+    --text-secondary: #000000;
+    --bg-primary: #ffffff;
+    --bg-secondary: #e4e4e4;
+}
+
+.theme-icon {
+    display: none;
+}
+
+.dark #darkIcon {
+    /*width: 4rem;
+    display: block;*/
+    max-width: 2rem;
+    display: block;
+}
+
+.light #lightIcon {
+    max-width: 2rem;
+    display: block;
 }
