--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,24 @@
 :root {
   font-size: 16px;
   font-family: 'Open Sans';
-  --text-primary: #b6b6b6;
-  --text-secondary: #ececec;
-
-  --bg-primary: #23232e;
-  --bg-secondary: #141418;
   --transition-speed: 600ms;
 }
+
+
+.dark {
+  --text-primary: #b6b6b6;
+  --text-secondary: #ececec;
+  --bg-primary: #1f1d2e;
+  --bg-secondary: #191724;
+}
+
+.light {
+  --text-primary: #1f1f1f;
+  --text-secondary: #000000;
+  --bg-primary: #ffffff;
+  --bg-secondary: #e4e4e4;
+}
+
 
 body {
   color: black;
@@ -97,12 +108,13 @@ main {
 /*fontawesome.com*/
 /*cores dos svgs*/
 .fa-primary {
-  color: #ff7eee;
+  color:  #3A6B35;
 }
 
 .fa-secondary {
-  color: #df49a6;
+  color:   #b5bd5b
 }
+
 
 .fa-primary,
 .fa-secondary {
@@ -176,21 +188,6 @@ main {
   }
 }
 
-
-.dark {
-  --text-primary: #b6b6b6;
-  --text-secondary: #ececec;
-  --bg-primary: #23232e;
-  --bg-secondary: #141418;
-}
-
-.light {
-  --text-primary: #1f1f1f;
-  --text-secondary: #000000;
-  --bg-primary: #ffffff;
-  --bg-secondary: #e4e4e4;
-}
-
 .theme-icon svg {
   display: none;
 }
@@ -204,3 +201,4 @@ main {
   max-width: 2rem;
   display: block;
 }
+  
